src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/EXTPointParameters_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTPointParameters_StringErrorContext.class */
public final class EXTPointParameters_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glPointParameterfEXT(IF)V", "net/labymod/core/laby3d/opengl/error/generated/EXTPointParametersErrorContext");
        methods.put("nglPointParameterfvEXT(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTPointParametersErrorContext");
        methods.put("glPointParameterfvEXT(ILjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTPointParametersErrorContext");
        methods.put("glPointParameterfvEXT(I[F)V", "net/labymod/core/laby3d/opengl/error/generated/EXTPointParametersErrorContext");
        return methods;
    }
}
